<resources>
    <string name="app_name">SintakSys</string>
    <string name="upload_file">Upload File</string>
    <string name="input_text">Input Text</string>
    <string name="submit">Submit</string>
    <string name="logo_sintaksys">Logo SintakSys</string>
    <string name="create_new">Buat Baru</string>
    <string name="tv_atau">atau</string>
    <string name="message">Ketik Sesuatu</string>
</resources>